--- a/module-simple/pom.xml
+++ b/module-simple/pom.xml
@@ -60,6 +60,7 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <version>42.3.5</version>
         </dependency>
 
     </dependencies>
