--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -61,6 +61,13 @@
             <artifactId>simpleapp-jdo-module-simple</artifactId>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.3.5</version>
+        </dependency>
+
         <!-- isis -->
         <dependency>
             <groupId>org.apache.isis.mavendeps</groupId>
@@ -118,18 +125,18 @@
     <profiles>
 
         <profile>
-            <id>jdbc-sqlserver</id>
+            <id>jdbc-postgresql</id>
             <activation>
                 <property>
                     <name>spring.profiles.active</name>
-                    <value>SQLSERVER</value>
+                    <value>POSTGRESQL</value>
                 </property>
             </activation>
             <dependencies>
                 <dependency>
-                    <groupId>com.microsoft.sqlserver</groupId>
-                    <artifactId>mssql-jdbc</artifactId>
-                    <version>7.4.1.jre8</version>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <!-- <version>42.2.12</version> ... version already managed -->
                 </dependency>
             </dependencies>
         </profile>
@@ -150,24 +157,6 @@
                 </dependency>
             </dependencies>
         </profile>-->
-
-        <profile>
-            <id>jdbc-postgresql</id>
-            <activation>
-                <property>
-                    <name>spring.profiles.active</name>
-                    <value>POSTGRESQL</value>
-                </property>
-            </activation>
-            <dependencies>
-                <dependency>
-                    <groupId>org.postgresql</groupId>
-                    <artifactId>postgresql</artifactId>
-                    <!-- <version>42.2.12</version> ... version already managed -->
-                </dependency>
-            </dependencies>
-        </profile>
-
 
         <profile>
             <id>deploy-to-docker-io</id>
