--- a/webapp/src/main/resources/config/application.properties
+++ b/webapp/src/main/resources/config/application.properties
@@ -1,16 +1,23 @@
-#spring.flyway.enabled=true
-#spring.flyway.default-schema=SIMPLE
-#spring.flyway.schemas=SIMPLE
+#
+# Recommend use for configuration that changes between environments.
+#
+# To override externally, see Spring Boot docs
+# https://docs.spring.io/spring-boot/docs/current/reference/html/spring-boot-features.html#boot-features-external-config
+#
+# See also /application.yml
+#
 
-spring.datasource.platform=postgresql
-spring.datasource.url=jdbc:postgresql://localhost/afiliado
-spring.datasource.dri
-ver-class-name=org.postgresql.Driver
+
+
+spring.flyway.enabled=false
+spring.sql.init.platform=postgresql
+spring.datasource.url=jdbc:postgresql://localhost/ObraSocial
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
 spring.datasource.password=lautiavila96
 
-#isis.persistence.schema.create-schema-sql-template=   (use flyway instead)
-isis.persistence.schema.auto-create-schemas=
+#isis.persistence.schema.auto-create-schemas=simple
+datanucleus.schema.autoCreateTables=true
 
-# DataNucleus, and must use camelCase rather than kebab-case
-datanucleus.schema.autoCreateAll=false
+# uncomment to run during bootstrap
+#isis.testing.fixtures.initial-script = domainapp.webapp.application.fixture.scenarios.DomainAppDemo
